--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ body {
 .main-container {
   display: flex;
   padding: 2%;
-  padding-top:7% ;
+  padding-top: 7%;
   justify-content: center;
 }
 
@@ -114,8 +114,7 @@ body {
 
 .right-content button,
 article button,
-.portofolio-box button
- {
+.portofolio-box button {
   padding: 8px 16px;
   background-color: var(--black);
   border: none;
@@ -166,38 +165,41 @@ article button:hover,
   }
 }
 
-article h1, .service-container h1, .portofolio-container h1 {
-    text-align: center;
-    padding: 3rem;
-    font-size: 2rem;
+article h1,
+.service-container h1,
+.portofolio-container h1 {
+  text-align: center;
+  padding: 3rem;
+  font-size: 2rem;
 }
 
 .container,
 .box-service-container {
-    display: flex;
-    margin: 2rem;
-    flex-wrap: wrap;
-    justify-content: center;
+  display: flex;
+  margin: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.box-article, .box-service, .portofolio-box {
-    max-width: 300px;
-    border-radius: 10px;
-    margin: 10px;
-    
+.box-article,
+.box-service {
+  max-width: 300px;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 .box-article img,
 .portofolio-box img {
-    border-radius: 10px 10px 0 0 ;
+  border-radius: 10px 10px 0 0;
 }
-.icon-container{
-    display: flex;
-    align-items: center;
+.icon-container {
+  display: flex;
+  align-items: center;
 }
 
-.icon-container img, .image-container p {
-    padding: 10px;
+.icon-container img,
+.image-container p {
+  padding: 2px;
 }
 
 article button {
@@ -207,17 +209,15 @@ article button {
 
 .service-container h1 {
   color: white;
-  
 }
 
 .service-container {
   background-color: var(--black);
- padding: 2rem;
+  padding: 2rem;
 }
 
 .service-container {
-  color:var(--black);
-  
+  color: var(--black);
 }
 
 .box-service {
@@ -227,7 +227,7 @@ article button {
   background-color: white;
 }
 
-.portofolio-container select  {
+.portofolio-container select {
   padding: 10px 1.5rem;
   border: 1px solid var(--bordercolor);
   margin-left: 5rem;
@@ -239,15 +239,15 @@ article button {
 }
 
 .portofolio-box h2,
-.portofolio-box p,
- {
+.portofolio-box p {
   padding-left: 10px;
   padding-right: 10px;
+  margin-le: 5px;
 }
 
 .image-parent {
-  width: 300px;
-  height: 200px;
+  width: 400px;
+  height: 400px;
   position: relative;
 }
 
@@ -258,9 +258,21 @@ article button {
   left: 0.5rem;
   border-radius: 1.5rem;
   text-align: center;
- padding: 4px;
+  padding: 4px;
+}
+
+.portofolio-box {
+  max-width: 500px;
+  border-radius: 10px;
+  margin: 10px;
 }
 
 .portofolio-box button {
-  margin: 10px;
+  margin-left: 10px;
 }
+
+.portofolio-real {
+  display: flex;
+  justify-content: space-between;
+}
+
