--- a/style.css
+++ b/style.css
@@ -227,12 +227,18 @@ article button {
   background-color: white;
 }
 
+
+/* portofolio container  */
+
 .portofolio-container select {
   padding: 10px 1.5rem;
   border: 1px solid var(--bordercolor);
   margin-left: 5rem;
+  margin-bottom: 2rem;
   font-size: 1rem;
 }
+
+/* for give outline /border to box */
 
 .portofolio-box {
   border: 1px solid var(--bordercolor);
@@ -242,7 +248,6 @@ article button {
 .portofolio-box p {
   padding-left: 10px;
   padding-right: 10px;
-  margin-le: 5px;
 }
 
 .image-parent {
@@ -250,6 +255,8 @@ article button {
   height: 300px;
   position: relative;
 }
+
+/* tag clouds */
 
 .cloud-tag {
   background-color: var(--web);
@@ -302,4 +309,5 @@ article button {
 .portofolio-boxs {
   display: flex;
   flex-wrap: wrap;
+  justify-content: center;
 }
