--- a/style.css
+++ b/style.css
@@ -373,3 +373,56 @@ article button,
   line-height: 1.4;
   text-align: left;
 }
+
+.footer {
+  background-color: #1c1c1c; 
+  color: #d3d3d3; 
+  padding: 20px 0;
+  text-align: center; 
+  bottom: 0;
+  width: 100%; 
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  max-width: 1200px; 
+  margin: 0 auto;
+  padding: 0 20px; 
+}
+
+.footer-nav {
+  display: flex;
+  gap: 20px; 
+}
+
+.footer-nav a {
+  color: var(--lighttext); 
+  text-decoration: none; 
+  font-weight:300; 
+  font-size: 0.9em;
+  transition: color 0.3s ease; 
+  text-transform: uppercase;
+}
+
+.footer-nav a:hover {
+  color: #ffffff; 
+}
+
+.footer-social {
+  display: flex; 
+  gap: 10px;
+}
+
+.footer-social .social-icon img {
+  width: 30px; 
+  height: 30px; 
+  border-radius: 50%; 
+  transition: transform 0.3s ease; 
+}
+
+.footer-social .social-icon img:hover {
+  transform: scale(1.1);
+}
+
