--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@ body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+}
+
+html {
   scroll-behavior: smooth;
 }
 
@@ -48,15 +51,6 @@ body {
   margin: 0 20px;
 }
 
-.menu-icon {
-  background-color: white;
-  border-radius: 3px;
-  cursor: pointer;
-  z-index: 1000;
-  display: none;
-}
-
-
 
 .nav-links li a {
   text-decoration: none;
@@ -72,10 +66,11 @@ body {
   color: white; 
 }
 
-
-.nav-buttons {
-  display: flex;
+.clicked a {
+  color: white;
 }
+
+
 
 /* Styling for each button */
 .nav-buttons button {
@@ -436,23 +431,4 @@ article button,
 
 .copyright {
   text-align: center;
-}
-
-@media(max-width: 900px) { 
-  footer {
-    font-size: 80%;
-  }
-
-  .social-icon img {
-    width: 10px;
-    height: 10px;
-  }
-}
-
-@media(max-width: 680px) { 
-  footer {
-    font-size: 60%;
-  }
-
-  
 }
